--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,179 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <LinearLayout
+    <fragment
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="8dp">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
-            android:text="BOT 1"
-            android:textSize="17sp"
-            android:textColor="@color/design_default_color_surface"
-            android:gravity="center"/>
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <com.github.lzyzsd.circleprogress.ArcProgress
-                    android:id="@+id/arc_progress_bot1"
-                    android:background="#000000"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:arc_progress="55"
-                    app:arc_text_color="@color/design_default_color_surface"
-                    app:arc_stroke_width="8dp"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    app:arc_bottom_text_size="18sp"
-                    app:arc_bottom_text="BATTERY"/>
-                <com.github.lzyzsd.circleprogress.CircleProgress
-                    android:id="@+id/circle_progress_bot1"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    app:circle_finished_color="@color/design_default_color_surface"
-                    app:circle_unfinished_color="@color/design_default_color_on_secondary"
-                    app:circle_prefix_text="Oil: "
-                    android:layout_height="match_parent"
-                    app:circle_progress="20"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
-            android:text="BOT 2"
-            android:textSize="17sp"
-            android:textColor="@color/design_default_color_surface"
-            android:gravity="center"/>
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <com.github.lzyzsd.circleprogress.ArcProgress
-                    android:id="@+id/arc_progress_bot2"
-                    android:background="#000000"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:arc_progress="55"
-                    app:arc_text_color="@color/design_default_color_surface"
-                    app:arc_stroke_width="8dp"
-                    app:arc_bottom_text_size="18sp"
-                    app:arc_bottom_text="BATTERY"/>
-                <com.github.lzyzsd.circleprogress.CircleProgress
-                    android:id="@+id/circle_progress_bot2"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    app:circle_finished_color="@color/design_default_color_surface"
-                    app:circle_unfinished_color="@color/design_default_color_on_secondary"
-                    app:circle_prefix_text="Oil: "
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_height="match_parent"
-                    app:circle_progress="20"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
-            android:text="BOT 3"
-            android:textSize="17sp"
-            android:textColor="@color/design_default_color_surface"
-            android:gravity="center"/>
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <com.github.lzyzsd.circleprogress.ArcProgress
-                    android:id="@+id/arc_progress_bot3"
-                    android:background="#000000"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:arc_progress="55"
-                    app:arc_text_color="@color/design_default_color_surface"
-                    app:arc_stroke_width="8dp"
-                    app:arc_bottom_text_size="18sp"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    app:arc_bottom_text="BATTERY"/>
-                <com.github.lzyzsd.circleprogress.CircleProgress
-                    android:id="@+id/circle_progress_bot3"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    app:circle_finished_color="@color/design_default_color_surface"
-                    app:circle_unfinished_color="@color/design_default_color_on_secondary"
-                    app:circle_prefix_text="Oil: "
-                    android:layout_height="match_parent"
-                    app:circle_progress="20"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
-            android:text="BOT 4"
-            android:textSize="17sp"
-            android:textColor="@color/design_default_color_surface"
-            android:gravity="center"/>
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_weight="1"
-            android:layout_height="0dp">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <com.github.lzyzsd.circleprogress.ArcProgress
-                    android:id="@+id/arc_progress_bot4"
-                    android:background="#000000"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    app:arc_progress="55"
-                    app:arc_text_color="@color/design_default_color_surface"
-                    app:arc_stroke_width="8dp"
-                    app:arc_bottom_text_size="18sp"
-                    app:arc_bottom_text="BATTERY"/>
-                <com.github.lzyzsd.circleprogress.CircleProgress
-                    android:id="@+id/circle_progress_bot4"
-                    android:layout_width="0dp"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_weight="1"
-                    app:circle_finished_color="@color/design_default_color_surface"
-                    app:circle_unfinished_color="@color/design_default_color_on_secondary"
-                    app:circle_prefix_text="Oil: "
-                    android:layout_height="match_parent"
-                    app:circle_progress="20"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
-
+        android:id="@+id/nav_host_fragment"
+        app:defaultNavHost='true'
+        app:navGraph='@navigation/home_nav'
+        android:name="androidx.navigation.fragment.NavHostFragment"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
