--- a/app/src/main/res/layout/fragment_bot1.xml
+++ b/app/src/main/res/layout/fragment_bot1.xml
@@ -5,59 +5,84 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Bot1Fragment">
-
-    <LinearLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="BOT 1"
+        android:layout_margin="16dp"
+        android:gravity="center"
+        android:id="@+id/title_1"
+        android:textSize="32sp"
+        android:textColor="@color/design_default_color_surface"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/title_1"
+        app:layout_constraintLeft_toRightOf="@id/arc_progress_bot_1"
+        android:text="Information about \n Battery is \n shown here"
+        android:layout_marginTop="26dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
+        android:id="@+id/desc_1"
+        android:textSize="16sp"
+        android:textColor="@color/design_default_color_surface"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/arc_progress_bot_1"
+        app:layout_constraintRight_toLeftOf="@id/circle_progress_bot_1"
+        android:text="Information about \n Oil is \n shown here"
+        android:layout_marginTop="26dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:id="@+id/desc_2"
+        android:textSize="16sp"
+        android:textColor="@color/design_default_color_surface"/>
+    <com.github.lzyzsd.circleprogress.ArcProgress
+        android:id="@+id/arc_progress_bot_1"
+        app:arc_bottom_text="BATTERY"
+        app:arc_bottom_text_size="18sp"
+        app:arc_progress="55"
+        app:arc_stroke_width="8dp"
+        app:arc_text_color="@color/design_default_color_surface"
+        android:layout_width="150dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toBottomOf="@id/title_1"
+        android:layout_margin="26dp"
+        android:background="#000000" />
+    <com.github.lzyzsd.circleprogress.CircleProgress
+        android:id="@+id/circle_progress_bot_1"
+        app:circle_finished_color="@color/design_default_color_surface"
+        app:circle_prefix_text="Oil: "
+        app:circle_progress="20"
+        app:layout_constraintRight_toRightOf="parent"
+        app:circle_unfinished_color="@color/design_default_color_on_secondary"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_margin="26dp"
+        app:layout_constraintTop_toBottomOf="@id/arc_progress_bot_1"
+        />
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Come Back"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/circle_progress_bot_1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="36dp"
+        android:id="@+id/comeback_1"/>
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/comeback_1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="36dp"
+        android:id="@+id/start_1"/>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
-            android:gravity="center"
-            android:text="BOT 1"
-            android:textColor="@color/design_default_color_surface"
-            android:textSize="17sp" />
-
-        <com.google.android.material.card.MaterialCardView
-            android:id='@+id/bot1'
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
-
-                <com.github.lzyzsd.circleprogress.ArcProgress
-                    android:id="@+id/arc_progress_bot1"
-                    app:arc_bottom_text="BATTERY"
-                    app:arc_bottom_text_size="18sp"
-                    app:arc_progress="55"
-                    app:arc_stroke_width="8dp"
-                    app:arc_text_color="@color/design_default_color_surface"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_weight="1"
-                    android:background="#000000" />
-
-                <com.github.lzyzsd.circleprogress.CircleProgress
-                    android:id="@+id/circle_progress_bot1"
-                    app:circle_finished_color="@color/design_default_color_surface"
-                    app:circle_prefix_text="Oil: "
-                    app:circle_progress="20"
-                    app:circle_unfinished_color="@color/design_default_color_on_secondary"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginLeft="6dp"
-                    android:layout_marginRight="6dp"
-                    android:layout_weight="1" />
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
