--- a/app/src/main/res/layout/fragment_bot2.xml
+++ b/app/src/main/res/layout/fragment_bot2.xml
@@ -3,6 +3,87 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Bot2Fragment">
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="BOT 2"
+        android:layout_margin="16dp"
+        android:gravity="center"
+        android:id="@+id/title_2"
+        android:textSize="32sp"
+        android:textColor="@color/design_default_color_surface"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/title_2"
+        app:layout_constraintLeft_toRightOf="@id/arc_progress_bot_2"
+        android:text="Information about \n Battery is \n shown here"
+        android:layout_marginTop="26dp"
+        android:layout_marginLeft="10dp"
+        android:gravity="center"
+        android:id="@+id/desc_1"
+        android:textSize="16sp"
+        android:textColor="@color/design_default_color_surface"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/arc_progress_bot_2"
+        app:layout_constraintRight_toLeftOf="@id/circle_progress_bot_2"
+        android:text="Information about \n Oil is \n shown here"
+        android:layout_marginTop="26dp"
+        android:layout_marginRight="10dp"
+        android:gravity="center"
+        android:id="@+id/desc_2"
+        android:textSize="16sp"
+        android:textColor="@color/design_default_color_surface"/>
+    <com.github.lzyzsd.circleprogress.ArcProgress
+        android:id="@+id/arc_progress_bot_2"
+        app:arc_bottom_text="BATTERY"
+        app:arc_bottom_text_size="18sp"
+        app:arc_progress="55"
+        app:arc_stroke_width="8dp"
+        app:arc_text_color="@color/design_default_color_surface"
+        android:layout_width="150dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="150dp"
+        app:layout_constraintTop_toBottomOf="@id/title_2"
+        android:layout_margin="26dp"
+        android:background="#000000" />
+    <com.github.lzyzsd.circleprogress.CircleProgress
+        android:id="@+id/circle_progress_bot_2"
+        app:circle_finished_color="@color/design_default_color_surface"
+        app:circle_prefix_text="Oil: "
+        app:circle_progress="20"
+        app:layout_constraintRight_toRightOf="parent"
+        app:circle_unfinished_color="@color/design_default_color_on_secondary"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_margin="26dp"
+        app:layout_constraintTop_toBottomOf="@id/arc_progress_bot_2"
+        />
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Come Back"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/circle_progress_bot_2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="36dp"
+        android:id="@+id/comeback_2"/>
+    <com.google.android.material.button.MaterialButton
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:text="Start"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/comeback_2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="36dp"
+        android:id="@+id/start_2"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
